fix styles for page main on tablet and smaller screens, add autoprefixer

--- a/src/components/Page/Page.module.scss
+++ b/src/components/Page/Page.module.scss
@@ -283,7 +283,7 @@
   }
 
   .main {
-    flex-direction: column;
+    display: block;
   }
 
   .menu {
